--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,18 @@ main {
     margin-right: 10px;
   }
 
+  #submit {
+    font-size: 1rem;
+    padding: 7px;
+    border: none;
+    background-color: #e03131;
+    color: white;
+  }
+
+  #submit:hover {
+    background-color: #c50404;
+  }
+
   .input-age,
   .input-km,
   .input-user-name,
