--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,12 @@ main {
   box-shadow: 0 0 14px -4px;
   margin-bottom: 20px;
 
+  & input,
+  & select {
+    padding: 3px;
+    border: 1px solid #e03131;
+  }
+
   & label {
     margin-right: 10px;
   }
@@ -88,10 +94,12 @@ main {
 
 .your-ticket {
   color: white;
+  margin-bottom: 15px;
 }
 
 .ticket {
   display: flex;
+  flex-wrap: wrap;
   /* width: 100%; */
   background-color: #f1f3f5;
   border-radius: 20px;
@@ -100,6 +108,14 @@ main {
 
   .user-name h2 {
     margin-bottom: 15px;
+  }
+
+  .ticket-math {
+    text-align: center;
+    margin-top: 15px;
+    font-weight: 600;
+    font-size: 0.8rem;
+    color: gray;
   }
 
   .ticket-details {
